Actions trigger on push

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -5,6 +5,11 @@ on:
         branches: 
             - develop
             - main
+    push:
+        branches: 
+            - develop
+            - main
+
 
 jobs:
     build_ios:
