--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -61,7 +61,7 @@ jobs:
         
             # Setup java
             -   name: Setup Java
-                uses: actions/setup-java@4
+                uses: actions/setup-java@v4
                 with:
                     distribution: 'oracle'
                     java-version: '21'
