--- a/.github/workflows/global-ci.yml
+++ b/.github/workflows/global-ci.yml
@@ -22,6 +22,9 @@ jobs:
                 with:
                     flutter-version: '3.19.4'
                     channel: 'stable'
+                    cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:'
+                    cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:'
+                    architecture: x64
 
             # Install dependencies
             -   name: Install dependencies
@@ -45,6 +48,9 @@ jobs:
                 with:
                     flutter-version: '3.19.4'
                     channel: 'stable'
+                    cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:'
+                    cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:'
+                    architecture: x64
 
             # Install dependencies
             -   name: Install dependencies
