--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
   flutter_native_splash: ^2.4.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -94,3 +95,6 @@ flutter:
           weight: 600
         - asset: assets/fonts/ReadexPro-Bold.ttf
           weight: 700
+    - family: MyIcons
+      fonts:
+        - asset: assets/fonts/MyIcons.ttf
